<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Just Java</string>
    <string name="caffeine">Choose Your Caffeine</string>
    <string name="cappuccino">Capuccino</string>
    <string name="latte">Latte</string>
    <string name="americano">Americano</string>
    <string name="mocha">Mocha</string>
    <string name="espresso">Espresso</string>
    <string name="namehint">Name</string>
    <string name="email">Email</string>
    <string name="quantity">Quantity</string>
    <string name="toppings">Toppings</string>
    <string name="pickup">Pick Up</string>
    <string name="delivery">Delivery</string>
    <string name="whippedcream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="biscuitcrumbs">Biscuit Crumbs</string>
    <string name="marshmallows">Marshmallows</string>
    <string name="caramelbits">Caramel Bits</string>
    <string name="order">order</string>
    <string name="ordersummary">Order Summary</string>
    <string name="proceed">Proceed To Payment</string>
    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank You! Visit Again.</string>

    <!--
      Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
      user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>

    <!--
      Whipped cream topping for the order summary. It will be shown in the format of
      "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_whipped_cream">Add Whipped Cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>

    <!--
      Chocolate topping for the order summary. It will be shown in the format of
      "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>

    <!--
      Quantity of coffee cups for the order summary. It will be shown in the format of
      "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>

    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">Total: $<xliff:g id="price" example="$10">%s</xliff:g></string>

    <!--
      Subject line for the order summary email. It will be in the format of
      "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
