<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.prachi.justjava.MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background">
            <EditText
                style="@style/edit_text_views"
                android:hint="@string/namehint"
                android:id="@+id/name"
                android:inputType="text" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:id="@+id/pickup"
                android:onClick="address"
                android:text="@string/pickup"
                android:textSize="18sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:id="@+id/delivery"
                android:onClick="address"
                android:text="@string/delivery"
                android:textSize="18sp"/>
            </RadioGroup>
            <EditText
                style="@style/edit_text_views"
                android:visibility="gone"
                android:hint="Address"
                android:id="@+id/address" />
            <TextView
                style="@style/header"
                android:text="@string/caffeine" />
            <CheckBox
                style="@style/check_box_views"
                android:id="@+id/cappucino"
                android:text="@string/cappuccino" />
            <CheckBox
                style="@style/check_box_views"
                android:id="@+id/latte"
                android:text="@string/latte" />
            <CheckBox
                style="@style/check_box_views"
                android:id="@+id/mocha"
                android:text="@string/mocha" />
            <CheckBox
                style="@style/check_box_views"
                android:id="@+id/americano"
                android:text="@string/americano" />
            <CheckBox
                style="@style/check_box_views"
                android:id="@+id/espresso"
                android:text="@string/espresso" />
        <TextView
            style="@style/header"
            android:text="@string/toppings" />
        <CheckBox
            style="@style/check_box_views"
            android:id="@+id/cream"
            android:text="@string/whippedcream" />
            <CheckBox
                style="@style/check_box_views"
                android:id="@+id/chocolate"
                android:text="@string/chocolate" />
            <CheckBox
                style="@style/check_box_views"
                android:id="@+id/biscuitcrumbs"
                android:text="@string/biscuitcrumbs" />
            <CheckBox
                style="@style/check_box_views"
                android:id="@+id/caramelbits"
                android:text="@string/caramelbits" />
        <TextView
            style="@style/header"
            android:text="@string/quantity"
            android:id="@+id/quantity" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/quantity_picker">
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:text="+"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:background="@android:color/background_dark"
            android:onClick="increment" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:fontFamily="sans-serif-light"
            android:id="@+id/quantity_text_view"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/background_dark"
            android:text="-"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:onClick="decrement"/>
        </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_summary"
                android:text="@string/ordersummary"
                android:padding="16dp"
                android:textSize="20sp"
                android:fontFamily="sans-serif-dark"
                android:textColor="@android:color/black"
                android:textAllCaps="true"
                android:visibility="gone" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_summary_text_view"
                android:text="$ 0.00"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-light"
                android:visibility="gone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/order"
            android:text="@string/order"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:onClick="submitOrder"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/proceed"
                android:text="@string/proceed"
                android:visibility="gone"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:layout_margin="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:onClick="submitOrder"/>

    </LinearLayout>

    </ScrollView>